Se actualizan datos de experiencia y hoja de vida

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,9 +6,10 @@
                 <h1 class="display-5">¿QUIEN SOY?</h1>
                 <div class="title-divider"></div>
                 <p style="text-align: justify;" class="lead">Licenciado en matemáticas con buen dominio epistemológico en el área de las
-                    matemáticas, manejo de las TIC como mediadora instrumental en el proceso
-                    educativo. Soy una persona organizada, con atención al detalle, autodidacta,
-                    interesado por mi actualización profesional y mejora continua.
+                    matemáticas, con habilidades y experiencia en desarrollo de software y automatización de pruebas. Soy una persona organizada,
+                    con atención al detalle, autodidacta, interesado por mi actualización profesional y mejora continua, excelente disposición
+                    para trabajar en equipo, capaz de adaptarme a cualquier circunstancia, con capacidad de trabajar bajo presión y dar siempre
+                    lo mejor de mí en cualquier situación.
                      </p>
                      <br>
 
@@ -30,7 +31,7 @@
         </div>
     </div>
     <div class="col-lg-6 col-sm-6 col-12 text-center order1">
-        <img src="./assets/img/JorgeAMontoya.png" class="foto_jd" alt="">
+        <img src="./assets/img/FotoJorgeMon.png" class="foto_jd" alt="">
     </div>
 
 </div>
