--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -3,7 +3,8 @@
         <h2>EDUCACIÓN</h2>
         <div class="title-divider"></div>
         <h3 >Formación académica</h3>
-        <p class="fondo" style="text-align: justify;">Poseo un pregrado en licenciatura en matemáticas, Soy una persona con bastante vocación por su profesión, razón por la cual constantemente me encuentro buscando nuevos aprendizajes y retos profesionales.</p>
+        <p class="fondo" style="text-align: justify;">Poseo un pregrado en licenciatura en matemáticas,actualmente me encuentro cursando la Tecnología en análisis y desarrollo de software,
+             Soy una persona con bastante vocación por su profesión, razón por la cual constantemente me encuentro buscando nuevos aprendizajes y retos profesionales.</p>
         <br>
 
         <div class="full-divider"></div>
@@ -17,8 +18,26 @@
                         </a>
                     </div>
                     <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Servicio Nacional de aprendizaje Sena</h5>
+                        <span>16/05/2023- Cursando</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Tecnología en análisis y desarrollo de software</h4>
+            </div>
+
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
                         <h5>UNIVERSIDAD del Quindío</h5>
-                        <span>2016 - 2022</span>
+                        <span>2016 - 2023</span>
                     </div>
                 </div>
 
@@ -66,7 +85,243 @@
             </div>
             <!--educación ***-->
             <div class="full-divider"></div>
-
+        
         </div>
+        <h3 >Cursos</h3>
+        <div class="title-divider"></div>
+        <div class="row">
+             <!--educación ***-->
+             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1quNkb24h_MetaaRR9Rpw3WwRwUtWZlm0/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>CAPACITATE PARA EL EMPLEO</h5>
+                        <span>Junio 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Programador (orientado a objetos)</h4>
+            </div>
+             <!--educación ***-->
+             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1HVyC9EZirezke_UE0o2BnjN-IZ8WMo-S/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>CAPACITATE PARA EL EMPLEO</h5>
+                        <span>Junio 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Administrador de servidores</h4>
+            </div>
+             <!--educación ***-->
+             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1EENYVF3DF7MDrXNZu-QAsgQa3EklKR_k/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>CAPACITATE PARA EL EMPLEO</h5>
+                        <span>Mayo 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Analista de datos</h4>
+            </div>
+              <!--educación ***-->
+              <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1w4Gth-tLeXib3HqTNL7zvjGi_pr62256/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>CAPACITATE PARA EL EMPLEO</h5>
+                        <span>Abril 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Administrador de bases de datos</h4>
+            </div>
+                        <!--educación ***-->
+                        <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                            <div class="row">
+                                <div class="col-lg-3 col-sm-4 col-2">
+                                    <a type="button" href="https://drive.google.com/file/d/108Hc8m03-33oq96ihrFpypJcBjPcUPGb/view?usp=sharing" target="_blank">
+                                        <i class="fa fa-university logo_work"></i>
+                                    </a>
+                                </div>
+                                <div class="col-lg-8 col-sm-8 col-8">
+                                    <h5>Platzi</h5>
+                                    <span>Abril 2023</span>
+                                </div>
+                            </div>
+            
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                            <h4 style="text-align: center;">Curso profesional de Git y GitHub</h4>
+                        </div>
+                        <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                            <div class="row">
+                                <div class="col-lg-3 col-sm-4 col-2">
+                                    <a type="button" href="https://drive.google.com/file/d/17dRBxIA41p0C9yrBIEooGEIms3sbR_Ra/view?usp=sharing" target="_blank">
+                                        <i class="fa fa-university logo_work"></i>
+                                    </a>
+                                </div>
+                                <div class="col-lg-8 col-sm-8 col-8">
+                                    <h5>Platzi</h5>
+                                    <span>Marzo 2023</span>
+                                </div>
+                            </div>
+            
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                            <h4 style="text-align: center;">Java orientado a objetos</h4>
+                        </div>
+                        <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                            <div class="row">
+                                <div class="col-lg-3 col-sm-4 col-2">
+                                    <a type="button" href="https://drive.google.com/file/d/10BRfu-AEpp7wofuyohyY_GgFPeb8iz3I/view?usp=sharing" target="_blank">
+                                        <i class="fa fa-university logo_work"></i>
+                                    </a>
+                                </div>
+                                <div class="col-lg-8 col-sm-8 col-8">
+                                    <h5>Platzi</h5>
+                                    <span>Marzo 2023</span>
+                                </div>
+                            </div>
+            
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                            <h4 style="text-align: center;">Fundamentos de pruebas de software</h4>
+                        </div>
+                        <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                            <div class="row">
+                                <div class="col-lg-3 col-sm-4 col-2">
+                                    <a type="button" href="https://drive.google.com/file/d/1UioljRYiQfFS0zN5Ew-RiVjqTdz9dchE/view?usp=sharing" target="_blank">
+                                        <i class="fa fa-university logo_work"></i>
+                                    </a>
+                                </div>
+                                <div class="col-lg-8 col-sm-8 col-8">
+                                    <h5>Platzi</h5>
+                                    <span>Marzo 2023</span>
+                                </div>
+                            </div>
+            
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                            <h4 style="text-align: center;">Introducción a la terminal y línea de comandos</h4>
+                        </div>
+
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1apJF2iddg5Zl9yLLTEq5_zCN4ZjBkQBJ/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Platzi</h5>
+                        <span>Febrero 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Introducción a la automatización de pruebas</h4>
+            </div>
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1M9om1wHzJTWoKLbOTtsF5sEXW2AoK5gw/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Platzi</h5>
+                        <span>Febrero 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Programación orientada a objetos</h4>
+            </div>
+           
+            <!--educación ***-->
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1znQW24iR1E-h6noenH0h_IAy13I49GnG/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Platzi</h5>
+                        <span>Enero 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Curso avanzado de JAVA SE</h4>
+            </div>
+           
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1ynfmfWTRRb569B9kt5vZkIK07RwdFrOx/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Capacitate para el empleo</h5>
+                        <span>Enero 2023</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Tester</h4>
+            </div>
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="https://drive.google.com/file/d/1GH_wIrPIGAafMsQJNK9UPlcVdda8ZJaT/view?usp=sharing" target="_blank">
+                            <i class="fa fa-university logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Sofka U</h5>
+                        <span>Diciembre 2022</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                <h4 style="text-align: center;">Pruebas funcionales de software</h4>
+            </div>
+        </div>
+
+        <div class="full-divider"></div>
     </div>
 </div>
