--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -2,14 +2,14 @@
     <div class="inner">
         <h2>Experiencia</h2>
         <div class="title-divider"></div>
-        <h3>9 meses de experiencia en el sector TI</h3>
-        <p style="text-align: justify;">___</p>
+        <h3>13 meses de experiencia en el sector TI</h3>
+        <p style="text-align: justify;"></p>
         <div class="full-divider"></div>
         <div class="row">
             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
                 <div class="row">
                     <div class="col-lg-3 col-sm-4 col-2 text-right">
-                        <a type="button" href="" target="_blank">
+                        <a type="button" href="https://drive.google.com/file/d/1BbGaeZiEVCCZUfb1x1oiEBuS-b_UyyPX/view?usp=sharing" target="_blank">
                             <i class="fa fa-briefcase logo_work"></i>
                         </a>
                     </div>
@@ -17,20 +17,23 @@
                     <div class="col-lg-8 col-sm-8 col-8">
                         <h5>Sofka Technologies</h5>
                         <h4>Analista de automatización de pruebas</h4>
-                        <span> 15/01/2023 - Actualidad</span>
+                        <span> 18/01/2023 - Actualidad</span>
                     </div>
                 </div>
 
             </div>
             <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
                 
-            
-
+            Cliente<h5>Éxito:</h5> Diseño y ejecución de casos de prueba manuale, usando lenguaje Gherkin, manejo
+            de bases de datos relacionales como MYSQL y no relacionales como MongoDB y sestema de mensajeri RABBIT
+            <br>
+            Cliente<h5>Protección:</h5> Realización de pruebas automatizadas y manuales, incluyendo pruebas de integración, funcionales.
+            Además estimación, planificación y diseño de casos de prueba; mantenimiento de robots de pruebas automatizadas.
             </div>
             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
                 <div class="row">
                     <div class="col-lg-3 col-sm-4 col-2 text-right">
-                        <a type="button" href="" target="_blank">
+                        <a type="button" href="https://drive.google.com/file/d/1kvFzvPz1FKUAJ3iOnTivsGeBFKqOrSJ-/view" target="_blank">
                             <i class="fa fa-briefcase logo_work"></i>
                         </a>
                     </div>
@@ -58,7 +61,7 @@
             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
                 <div class="row">
                     <div class="col-lg-3 col-sm-4 col-2 text-right">
-                        <a type="button" href="" target="_blank">
+                        <a type="button" href="https://drive.google.com/file/d/1kvFzvPz1FKUAJ3iOnTivsGeBFKqOrSJ-/view" target="_blank">
                             <i class="fa fa-briefcase logo_work"></i>
                         </a>
                     </div>
