--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -6,6 +6,36 @@
         <p style="text-align: justify;">Algunos de los proyectos en los que he podido participar a nivel laboral y personal.</p>
         <div class="full-divider"></div>
         <div class="row">
+
+
+            <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-4 col-2">
+                        <a type="button" href="http://jarinconapps.com/apps/evg-resolucion-triangulos/#/iniciar-sesion" target="_blank">
+                            <i class="fa fa-dropbox logo_work"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-8 col-8">
+                        <h5>Entorno virtual gamificado para el aprendizaje de trigonometría</h5>
+                        <span>Universidad del Quindío </span>
+                        <br>
+                        <span>Tesis de grado</span>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-lg-6 col-sm-6 col-12 padding_col_content" style="text-align: justify;">
+                Software educativo para el mejoramiento de la resolución de triángulos involucrando la teoría de la gamificación,
+                Desarrollado en Node.js y Angular.
+                <br>
+                <a href="http://jarinconapps.com/apps/evg-resolucion-triangulos/#/iniciar-sesion">http://jarinconapps.com/apps/evg-resolucion-triangulos/#/iniciar-sesion</a>
+                <br>
+                <a href="https://drive.google.com/file/d/1ljWFK3HJ_qeR0pIBr7jw8UEDxJjsduAh/view?usp=sharing">Registro del Software educativo</a>
+            </div>
+
+
+
             <div class="col-lg-5 col-sm-6 col-12 padding_col_job">
                 <div class="row">
                     <div class="col-lg-3 col-sm-4 col-2">
