--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-lg-8 col-sm-8 col-10 direction mt-2">
                         <strong>Teléfono</strong>
-                        <br> <strong>(+57) -3113229014</strong>
+                        <br> <strong>(+57) 3113229014</strong>
                     </div>
                     <!---->
                     <div class="col-lg-3 col-sm-4 col-2 mt-2">
